CompiladorLEGO/LEGOParser.py
# Generated from LEGO.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LEGOParser ( Parser ):

    grammarFileName = "LEGO.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'LEGO_INICIO'", "'LEGO_FIN'", "'MOSTRAR_LEGO'", 
                     "'PEDIR_LEGO'", "'SI'", "'SINO'", "'REPETIR_LEGO'", 
                     "'MIENTRAS_APILO'", "'AGREGAR_BLOQUE'", "'QUITAR_BLOQUE'", 
                     "'APILAR_BLOQUES'", "'DIVIDIR_BLOQUES'", "'POTENCIAR_BLOQUES'", 
                     "'MAS_GRANDE_QUE'", "'MAS_PEQUE_QUE'", "'ESTE_BLOQUE_IGUAL_A'", 
                     "'DIFERENTE_A'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'='", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "LEGO_INICIO", "LEGO_FIN", "MOSTRAR_LEGO", 
                      "PEDIR_LEGO", "SI", "SINO", "REPETIR_LEGO", "MIENTRAS_APILO", 
                      "AGREGAR_BLOQUE", "QUITAR_BLOQUE", "APILAR_BLOQUES", 
                      "DIVIDIR_BLOQUES", "POTENCIAR_BLOQUES", "MAS_GRANDE_QUE", 
                      "MAS_PEQUE_QUE", "ESTE_BLOQUE_IGUAL_A", "DIFERENTE_A", 
                      "BLOQUE_ABRIR", "BLOQUE_CERRAR", "NUMBER", "IDENTIFICADOR", 
                      "PALABRA_BLOQUE", "MUCHOS_BLOQUES", "WS", "LPAREN", 
                      "RPAREN", "EQUAL", "SEMICOLON", "COLON" ]

    RULE_programa = 0
    RULE_bloque = 1
    RULE_instruccion = 2
    RULE_asignacionInstruccion = 3
    RULE_mostrarInstruccion = 4
    RULE_pedirInstruccion = 5
    RULE_repetirInstruccion = 6
    RULE_condicionInstruccion = 7
    RULE_mientrasApiloInstruccion = 8
    RULE_operacionInstruccion = 9
    RULE_expresion = 10
    RULE_term = 11
    RULE_factor = 12
    RULE_condicion = 13
    RULE_operadorLog = 14
    RULE_operadorMat = 15

    ruleNames =  [ "programa", "bloque", "instruccion", "asignacionInstruccion", 
                   "mostrarInstruccion", "pedirInstruccion", "repetirInstruccion", 
                   "condicionInstruccion", "mientrasApiloInstruccion", "operacionInstruccion", 
                   "expresion", "term", "factor", "condicion", "operadorLog", 
                   "operadorMat" ]

    EOF = Token.EOF
    LEGO_INICIO=1
    LEGO_FIN=2
    MOSTRAR_LEGO=3
    PEDIR_LEGO=4
    SI=5
    SINO=6
    REPETIR_LEGO=7
    MIENTRAS_APILO=8
    AGREGAR_BLOQUE=9
    QUITAR_BLOQUE=10
    APILAR_BLOQUES=11
    DIVIDIR_BLOQUES=12
    POTENCIAR_BLOQUES=13
    MAS_GRANDE_QUE=14
    MAS_PEQUE_QUE=15
    ESTE_BLOQUE_IGUAL_A=16
    DIFERENTE_A=17
    BLOQUE_ABRIR=18
    BLOQUE_CERRAR=19
    NUMBER=20
    IDENTIFICADOR=21
    PALABRA_BLOQUE=22
    MUCHOS_BLOQUES=23
    WS=24
    LPAREN=25
    RPAREN=26
    EQUAL=27
    SEMICOLON=28
    COLON=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEGO_INICIO(self):
            return self.getToken(LEGOParser.LEGO_INICIO, 0)

        def bloque(self):
            return self.getTypedRuleContext(LEGOParser.BloqueContext,0)


        def LEGO_FIN(self):
            return self.getToken(LEGOParser.LEGO_FIN, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LEGOParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(LEGOParser.LEGO_INICIO)
            self.state = 33
            self.bloque()
            self.state = 34
            self.match(LEGOParser.LEGO_FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOQUE_ABRIR(self):
            return self.getToken(LEGOParser.BLOQUE_ABRIR, 0)

        def BLOQUE_CERRAR(self):
            return self.getToken(LEGOParser.BLOQUE_CERRAR, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(LEGOParser.InstruccionContext,i)


        def getRuleIndex(self):
            return LEGOParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = LEGOParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(LEGOParser.BLOQUE_ABRIR)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2097592) != 0):
                self.state = 37
                self.instruccion()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(LEGOParser.BLOQUE_CERRAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacionInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.AsignacionInstruccionContext,0)


        def mostrarInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.MostrarInstruccionContext,0)


        def pedirInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.PedirInstruccionContext,0)


        def condicionInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.CondicionInstruccionContext,0)


        def repetirInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.RepetirInstruccionContext,0)


        def mientrasApiloInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.MientrasApiloInstruccionContext,0)


        def operacionInstruccion(self):
            return self.getTypedRuleContext(LEGOParser.OperacionInstruccionContext,0)


        def getRuleIndex(self):
            return LEGOParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)




    def instruccion(self):

        localctx = LEGOParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.asignacionInstruccion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.mostrarInstruccion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.pedirInstruccion()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.condicionInstruccion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.repetirInstruccion()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.mientrasApiloInstruccion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.operacionInstruccion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LEGOParser.IDENTIFICADOR, 0)

        def EQUAL(self):
            return self.getToken(LEGOParser.EQUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(LEGOParser.ExpresionContext,0)


        def SEMICOLON(self):
            return self.getToken(LEGOParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_asignacionInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacionInstruccion" ):
                listener.enterAsignacionInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacionInstruccion" ):
                listener.exitAsignacionInstruccion(self)




    def asignacionInstruccion(self):

        localctx = LEGOParser.AsignacionInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacionInstruccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(LEGOParser.IDENTIFICADOR)
            self.state = 55
            self.match(LEGOParser.EQUAL)
            self.state = 56
            self.expresion()
            self.state = 57
            self.match(LEGOParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MostrarInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOSTRAR_LEGO(self):
            return self.getToken(LEGOParser.MOSTRAR_LEGO, 0)

        def LPAREN(self):
            return self.getToken(LEGOParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LEGOParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(LEGOParser.SEMICOLON, 0)

        def PALABRA_BLOQUE(self):
            return self.getToken(LEGOParser.PALABRA_BLOQUE, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LEGOParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_mostrarInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMostrarInstruccion" ):
                listener.enterMostrarInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMostrarInstruccion" ):
                listener.exitMostrarInstruccion(self)




    def mostrarInstruccion(self):

        localctx = LEGOParser.MostrarInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mostrarInstruccion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(LEGOParser.MOSTRAR_LEGO)
            self.state = 60
            self.match(LEGOParser.LPAREN)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 62
            self.match(LEGOParser.RPAREN)
            self.state = 63
            self.match(LEGOParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PedirInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEDIR_LEGO(self):
            return self.getToken(LEGOParser.PEDIR_LEGO, 0)

        def LPAREN(self):
            return self.getToken(LEGOParser.LPAREN, 0)

        def PALABRA_BLOQUE(self):
            return self.getToken(LEGOParser.PALABRA_BLOQUE, 0)

        def COLON(self):
            return self.getToken(LEGOParser.COLON, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LEGOParser.IDENTIFICADOR, 0)

        def RPAREN(self):
            return self.getToken(LEGOParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(LEGOParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_pedirInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPedirInstruccion" ):
                listener.enterPedirInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPedirInstruccion" ):
                listener.exitPedirInstruccion(self)




    def pedirInstruccion(self):

        localctx = LEGOParser.PedirInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pedirInstruccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(LEGOParser.PEDIR_LEGO)
            self.state = 66
            self.match(LEGOParser.LPAREN)
            self.state = 67
            self.match(LEGOParser.PALABRA_BLOQUE)
            self.state = 68
            self.match(LEGOParser.COLON)
            self.state = 69
            self.match(LEGOParser.IDENTIFICADOR)
            self.state = 70
            self.match(LEGOParser.RPAREN)
            self.state = 71
            self.match(LEGOParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepetirInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPETIR_LEGO(self):
            return self.getToken(LEGOParser.REPETIR_LEGO, 0)

        def LPAREN(self):
            return self.getToken(LEGOParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(LEGOParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(LEGOParser.RPAREN, 0)

        def bloque(self):
            return self.getTypedRuleContext(LEGOParser.BloqueContext,0)


        def getRuleIndex(self):
            return LEGOParser.RULE_repetirInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepetirInstruccion" ):
                listener.enterRepetirInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepetirInstruccion" ):
                listener.exitRepetirInstruccion(self)




    def repetirInstruccion(self):

        localctx = LEGOParser.RepetirInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_repetirInstruccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(LEGOParser.REPETIR_LEGO)
            self.state = 74
            self.match(LEGOParser.LPAREN)
            self.state = 75
            self.expresion()
            self.state = 76
            self.match(LEGOParser.RPAREN)
            self.state = 77
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(LEGOParser.SI, 0)

        def LPAREN(self):
            return self.getToken(LEGOParser.LPAREN, 0)

        def condicion(self):
            return self.getTypedRuleContext(LEGOParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(LEGOParser.RPAREN, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.BloqueContext)
            else:
                return self.getTypedRuleContext(LEGOParser.BloqueContext,i)


        def SINO(self):
            return self.getToken(LEGOParser.SINO, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_condicionInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionInstruccion" ):
                listener.enterCondicionInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionInstruccion" ):
                listener.exitCondicionInstruccion(self)




    def condicionInstruccion(self):

        localctx = LEGOParser.CondicionInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condicionInstruccion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(LEGOParser.SI)
            self.state = 80
            self.match(LEGOParser.LPAREN)
            self.state = 81
            self.condicion()
            self.state = 82
            self.match(LEGOParser.RPAREN)
            self.state = 83
            self.bloque()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 84
                self.match(LEGOParser.SINO)
                self.state = 85
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MientrasApiloInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS_APILO(self):
            return self.getToken(LEGOParser.MIENTRAS_APILO, 0)

        def LPAREN(self):
            return self.getToken(LEGOParser.LPAREN, 0)

        def condicion(self):
            return self.getTypedRuleContext(LEGOParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(LEGOParser.RPAREN, 0)

        def bloque(self):
            return self.getTypedRuleContext(LEGOParser.BloqueContext,0)


        def getRuleIndex(self):
            return LEGOParser.RULE_mientrasApiloInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMientrasApiloInstruccion" ):
                listener.enterMientrasApiloInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMientrasApiloInstruccion" ):
                listener.exitMientrasApiloInstruccion(self)




    def mientrasApiloInstruccion(self):

        localctx = LEGOParser.MientrasApiloInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mientrasApiloInstruccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(LEGOParser.MIENTRAS_APILO)
            self.state = 89
            self.match(LEGOParser.LPAREN)
            self.state = 90
            self.condicion()
            self.state = 91
            self.match(LEGOParser.RPAREN)
            self.state = 92
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionInstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LEGOParser.IDENTIFICADOR, 0)

        def EQUAL(self):
            return self.getToken(LEGOParser.EQUAL, 0)

        def operadorMat(self):
            return self.getTypedRuleContext(LEGOParser.OperadorMatContext,0)


        def SEMICOLON(self):
            return self.getToken(LEGOParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_operacionInstruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionInstruccion" ):
                listener.enterOperacionInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionInstruccion" ):
                listener.exitOperacionInstruccion(self)




    def operacionInstruccion(self):

        localctx = LEGOParser.OperacionInstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operacionInstruccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(LEGOParser.IDENTIFICADOR)
            self.state = 95
            self.match(LEGOParser.EQUAL)
            self.state = 96
            self.operadorMat()
            self.state = 97
            self.match(LEGOParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.TermContext)
            else:
                return self.getTypedRuleContext(LEGOParser.TermContext,i)


        def operadorMat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.OperadorMatContext)
            else:
                return self.getTypedRuleContext(LEGOParser.OperadorMatContext,i)


        def getRuleIndex(self):
            return LEGOParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = LEGOParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.term()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15872) != 0):
                self.state = 100
                self.operadorMat()
                self.state = 101
                self.term()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.FactorContext)
            else:
                return self.getTypedRuleContext(LEGOParser.FactorContext,i)


        def operadorMat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.OperadorMatContext)
            else:
                return self.getTypedRuleContext(LEGOParser.OperadorMatContext,i)


        def getRuleIndex(self):
            return LEGOParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = LEGOParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.factor()
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self.operadorMat()
                    self.state = 110
                    self.factor() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(LEGOParser.NUMBER, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LEGOParser.IDENTIFICADOR, 0)

        def LPAREN(self):
            return self.getToken(LEGOParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(LEGOParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(LEGOParser.RPAREN, 0)

        def getRuleIndex(self):
            return LEGOParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = LEGOParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_factor)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(LEGOParser.NUMBER)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(LEGOParser.IDENTIFICADOR)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(LEGOParser.LPAREN)
                self.state = 120
                self.expresion()
                self.state = 121
                self.match(LEGOParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LEGOParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(LEGOParser.ExpresionContext,i)


        def operadorLog(self):
            return self.getTypedRuleContext(LEGOParser.OperadorLogContext,0)


        def getRuleIndex(self):
            return LEGOParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):
